<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/preferencesItem"
        android:title="@string/preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigatorItem"
        android:title="@string/disable_navigator"
        app:showAsAction="never" />

    <item
        android:id="@+id/loggerItem"
        android:title="@string/show_logger"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutItem"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/debugItem"
        android:title="@string/debug"
        app:showAsAction="ifRoom" />
</menu>